--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <footer class="attribution">
     Challenge by <a title="Frontend Mentor" class="attribution__link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a title="Author" class="attribution__link" href="https://github.com/hiofabien">HioFabien</a>.
+    Coded by <a title="Author" class="attribution__link" href="https://github.com/hiozen">Hiozen</a>.
   </footer>
 </body>
 </html>
