--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Hiozen">
+  <meta name="publisher" content="Hiozen">
+  <meta name="description" content="Stats Preview Card Design">
+  <meta name="keywords" content="HTML, CSS, Frontend">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Stats preview card component</title>
@@ -40,10 +44,5 @@
       <img class="picture__img" src="images/image-header-desktop.jpg" alt="working place">
     </section>
   </main>
-
-  <footer class="attribution">
-    Challenge by <a title="Frontend Mentor" class="attribution__link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a title="Author" class="attribution__link" href="https://github.com/hiozen">Hiozen</a>.
-  </footer>
 </body>
 </html>
