--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Atomyst">
-  <meta name="publisher" content="Atomyst">
+  <meta name="author" content="Atosmo">
+  <meta name="publisher" content="Atosmo">
   <meta name="description" content="Stats Preview Card Design">
   <meta name="keywords" content="HTML, CSS, Frontend">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
